--- a/Neon-Kotlin/src/plugin.yml
+++ b/Neon-Kotlin/src/plugin.yml
@@ -1,10 +1,10 @@
 name: Neon
 author: ICities
-version: '1.10-pre_1'
+version: '1.10-pre_2'
 api-version: '1.17'
 depend: []
 softdepend: []
-main: com.islandstudio.neon.Main
+main: com.islandstudio.neon.Neon
 description: Plugin for Spigot server
 
 commands:
