- Updated several functions parameter input to receive 'NamespacedKey' instead of NamespaceKeys. - Updated 'removeNeonKey' to return Boolean whenever the removal is success or failure - Added 'removeNeonKeyByNamespace' function where used to force remove NeonKey from the item. - Renamed nDurable both header & damage key
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/NeonKeys.properties
+++ b/Neon-Kotlin/src/resources/NeonKeys.properties
@@ -175,8 +175,8 @@ nGUI.button.key = neon_button
 nGUI.button.highlight.key = neon_button_highlight
 
 # ~~ nDurable Namespace Key ~~ #
-nDurable.property.header.key = neon_n_durable
-nDurable.property.damage.key = neon_n_durable_damage
+nDurable.property.header.key = neon_ndurable
+nDurable.property.damage.key = neon_ndurable_damage
 
 # ~~ nCommandList Namespace Key ~~ #
 nCommandList.property.id.key = neon_id
