- Re-enabled command for nFireworks - Added GUI to create custom fireworks - Updated command to integrate with the GUI. - Optimized firework creation to adapt the GUI. - Added option properties for nFireworks
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/nServerFeatures/nServerFeatures.yml
+++ b/Neon-Kotlin/src/resources/nServerFeatures/nServerFeatures.yml
@@ -65,5 +65,7 @@ nFireworks:
   isExperimental: true
   description: 'Create custom firework pattern by using imported images.'
   isEnabled: false
-  command: ''
-  options: {}
+  command: '/neon fireworks'
+  options:
+    particleSize: 1.0
+    particleSpeed: 1.0
