- Resolved incorrect remapped field for 'applyDamagePropertyOnGive' - Resolved incorrect NeonKey for 'applyDamageProperty' - Resolved removal damage property completion message being displayed even the target player not found. - Updated command syntax for nDurable to support force removal of damage property.
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/nCommand/commands-Admin.yml
+++ b/Neon-Kotlin/src/resources/nCommand/commands-Admin.yml
@@ -55,7 +55,7 @@ debug:
 durability:
   withPrefix: '/neon durability'
   usages:
-    - syntax: '/neon durability removeDamageProperty'
+    - syntax: '/neon durability removeDamageProperty <isForceRemoval>'
       description: 'Remove damage property for item in main hand that set by nDurable.'
-    - syntax: '/neon durability removeDamageProperty <playerName>'
+    - syntax: '/neon durability removeDamageProperty <isForceRemoval> <playerName>'
       description: 'Remove damage property for item in target player inventory that set by nDurable.'
