- Added nPainting to the nServerFeatures as Experimental Feature
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/nServerFeatures/nServerFeatures.yml
+++ b/Neon-Kotlin/src/resources/nServerFeatures/nServerFeatures.yml
@@ -69,3 +69,10 @@ nFireworks:
   options:
     particleSize: 1.0
     particleSpeed: 1.0
+
+nPainting:
+  isExperimental: true
+  description: '[Incompatible with Minecraft 1.17.X] Create custom painting by using imported images.'
+  isEnabled: false
+  command: '/neon painting'
+  options: {}
