- Added new NMS mappings to support MC 1.20.2
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/NMSMapping.yml
+++ b/Neon-Kotlin/src/resources/NMSMapping.yml
@@ -8,6 +8,8 @@ fields:
       version: ['1.19.4']
     bQ:
       version: ['1.20', '1.20.1']
+    bR:
+      version: ['1.20.2']
   ContainerBase:
     bV:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2']
@@ -17,22 +19,24 @@ fields:
       version: ['1.19.4']
     bR:
       version: ['1.20', '1.20.1']
+    bS:
+      version: ['1.20.2']
   ServerRecipes:
     c:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
   McServer:
     c:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4']
     d:
-      version: ['1.20', '1.20.1']
+      version: ['1.20', '1.20.1', '1.20.2']
   MerchantRecipeResult:
     c:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
   PlayerConnection:
     b:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4']
     c:
-      version: ['1.20', '1.20.1']
+      version: ['1.20', '1.20.1', '1.20.2']
   NetworkManager:
     a:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2']
@@ -40,11 +44,45 @@ fields:
       version: ['1.19', '1.19.1', '1.19.2', '1.19.3']
     h:
       version: ['1.19.4', '1.20', '1.20.1']
+    c:
+      version: ['1.20.2']
   Channel:
     k:
       version: ['1.17', '1.17.1']
     m:
       version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+    n:
+      version: ['1.20.2']
+  ButtonID:
+    b:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  Slot:
+    d:
+      version: ['1.17']
+    e:
+      version: ['1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  WorldCache:
+    b:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  OverworldResourceKey:
+    e:
+      version: ['1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3']
+    f:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1']
+    h:
+      version: ['1.19.4', '1.20', '1.20.1', '1.20.2']
+  WorldMapData:
+    worldMap:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  WorldMapDataId:
+    id:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  WorldMapDataMapView:
+    mapView:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  WorldMapDataColors:
+    g:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
 
 methods:
   CraftingManager:
@@ -53,28 +91,65 @@ methods:
     aC:
       version: ['1.18', '1.18.1', '1.18.2']
     aE:
-      version: ['1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
   PlayerRecipeBook:
     getRecipeBook:
       version: ['1.17', '1.17.1']
     E:
       version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+    G:
+      version: ['1.20.2']
   InitRecipeBook:
     a:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
   SendPacket:
     sendPacket:
       version: ['1.17', '1.17.1']
     a:
       version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+    b:
+      version: ['1.20.2']
   GetBukkitEntity:
     getBukkitEntity:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
   SetContainerData:
     setContainerData:
       version: ['1.17', '1.17.1']
     a:
-      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  GetWorldPersistentContainer:
+    getWorldPersistentData:
+      version: ['1.17', '1.17.1']
+    u:
+      version: ['1.18', '1.18.1']
+    s:
+      version: ['1.19.4', '1.20', '1.20.1', '1.20.2']
+    t:
+      version: ['1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3']
+  GetMapDataFile:
+    a:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  SetWorldMapData:
+    a:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  SaveWorldCache:
+    a:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  GetSetSlotItemStack:
+    d:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+    e:
+      version: ['1.20.2']
 
+constructors:
+  ClientPacketUpdateRecipes:
+    PacketPlayOutRecipeUpdate:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+  ClientPacketSetActionBarText:
+    ClientboundSetActionBarTextPacket:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
 
-constructors: {}
+classes:
+  Packet:
+    Packet:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
