- Added & validated NMS mapping for Minecraft 1.20.3, 1.20.4 - Resolved an issue where pagination for Command List UI no longer working in the Minecraft 1.20.3 & 1.20.4 - Revamped the nItemHighlight ([New]nItemGlinter) due to deprecation of Bukkit API related to Enchantment glint
Signed-off-by: ICitiesMaxQ <69842262+ICitiesMaxQ@users.noreply.github.com>

--- a/Neon-Kotlin/src/resources/NMSMapping.yml
+++ b/Neon-Kotlin/src/resources/NMSMapping.yml
@@ -9,10 +9,12 @@ fields:
     bQ:
       version: ['1.20', '1.20.1']
     bR:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
   ContainerBase:
     bV:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2']
+      version: ['1.17', '1.17.1', '1.18.2']
+    bW:
+      version: ['1.18', '1.18.1']
     bU:
       version: ['1.19', '1.19.1', '1.19.2', '1.19.3']
     bP:
@@ -20,23 +22,23 @@ fields:
     bR:
       version: ['1.20', '1.20.1']
     bS:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
   ServerRecipes:
     c:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   McServer:
     c:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4']
     d:
-      version: ['1.20', '1.20.1', '1.20.2']
+      version: ['1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   MerchantRecipeResult:
     c:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   PlayerConnection:
     b:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4']
     c:
-      version: ['1.20', '1.20.1', '1.20.2']
+      version: ['1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   NetworkManager:
     a:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2']
@@ -45,44 +47,64 @@ fields:
     h:
       version: ['1.19.4', '1.20', '1.20.1']
     c:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
   Channel:
     k:
-      version: ['1.17', '1.17.1']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1']
     m:
-      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
+      version: ['1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
     n:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
   ButtonID:
     b:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   Slot:
     d:
       version: ['1.17']
     e:
-      version: ['1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   WorldCache:
     b:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   OverworldResourceKey:
     e:
       version: ['1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3']
     f:
       version: ['1.17', '1.17.1', '1.18', '1.18.1']
     h:
-      version: ['1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   WorldMapData:
     worldMap:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   WorldMapDataId:
     id:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   WorldMapDataMapView:
     mapView:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   WorldMapDataColors:
     g:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
+  EnchantmentRegistry:
+    X:
+      version: ['1.17', '1.17.1']
+    Y:
+      version: ['1.18', '1.18.1']
+    V:
+      version: ['1.18.2']
+    W:
+      version: ['1.19', '1.19.1', '1.19.2']
+    g:
+      version: ['1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+    f:
+      version: ['1.20.3', '1.20.4']
+  RegistryEntryToggleState:
+    bL:
+      version: ['1.18.2']
+    ca:
+      version: ['1.19', '1.19.1', '1.19.2']
+    l:
+      version: ['1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
 
 methods:
   CraftingManager:
@@ -92,6 +114,8 @@ methods:
       version: ['1.18', '1.18.1', '1.18.2']
     aE:
       version: ['1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+    aG:
+      version: ['1.20.3', '1.20.4']
   PlayerRecipeBook:
     getRecipeBook:
       version: ['1.17', '1.17.1']
@@ -99,57 +123,84 @@ methods:
       version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
     G:
       version: ['1.20.2']
+    I:
+      version: ['1.20.3', '1.20.4']
   InitRecipeBook:
     a:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   SendPacket:
     sendPacket:
       version: ['1.17', '1.17.1']
     a:
       version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
     b:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
   GetBukkitEntity:
     getBukkitEntity:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   SetContainerData:
     setContainerData:
       version: ['1.17', '1.17.1']
     a:
-      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   GetWorldPersistentContainer:
     getWorldPersistentData:
       version: ['1.17', '1.17.1']
     u:
-      version: ['1.18', '1.18.1']
+      version: ['1.18', '1.18.1', '1.20.3', '1.20.4']
     s:
       version: ['1.19.4', '1.20', '1.20.1', '1.20.2']
     t:
       version: ['1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3']
   GetMapDataFile:
     a:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   SetWorldMapData:
     a:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   SaveWorldCache:
     a:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   GetSetSlotItemStack:
     d:
       version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1']
     e:
-      version: ['1.20.2']
+      version: ['1.20.2', '1.20.3', '1.20.4']
+  ApplyEnchantment:
+    addEnchantment:
+      version: ['1.17', '1.17.1']
+    a:
+      version: ['1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
+  GetEnchantmentByNamespacedKey:
+    get:
+      version: ['1.17', '1.17.1']
+    a:
+      version: ['1.20.4']
+  RegisterEnchantment:
+    a:
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
+  RevokeRegistryEntry:
+    j:
+      version: ['1.18.2']
+    k:
+      version: ['1.19', '1.19.1', '1.19.2']
+    l:
+      version: ['1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
+  LecternBookPage:
+    j:
+      version: ['1.17']
+    m:
+      version: ['1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
 
 constructors:
   ClientPacketUpdateRecipes:
     PacketPlayOutRecipeUpdate:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
   ClientPacketSetActionBarText:
     ClientboundSetActionBarTextPacket:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
 
 classes:
   Packet:
     Packet:
-      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2']
+      version: ['1.17', '1.17.1', '1.18', '1.18.1', '1.18.2', '1.19', '1.19.1', '1.19.2', '1.19.3', '1.19.4', '1.20', '1.20.1', '1.20.2', '1.20.3', '1.20.4']
