--- a/Neon-Kotlin/src/resources/NeonKeyProperties/NeonKeys-General.properties
+++ b/Neon-Kotlin/src/resources/NeonKeyProperties/NeonKeys-General.properties
@@ -17,6 +17,7 @@ nCommandList.property.id.key = neon_id
 
 # ~~ nPainting Namespace Key ~~ #
 nPainting.tool.id.key = neon_npainting_item
+nPainting.tool.removal.key = neon_npainting_removal_stick
 nPainting.property.header.key = neon_npainting
 nPainting.property.imageName.key = neon_npainting_image_name
 nPainting.property.position.key = neon_npainting_position
